# ada502-fireguard-project

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PRE_DEPLOYMENT_CHECKLIST.md  README.md  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml
backend/: Dockerfile  MQTT_TEST_MODE.md  THINGSPEAK_TEST_MODE.md  pyproject.toml
backend/src/: config.py
backend/src/app/: auth.py  background.py  main.py  schemas.py
backend/src/app/db/: analytics_targets.py  database.py  models.py
backend/src/app/routers/: __init__.py  history_router.py  risk_router.py  subscription.py  zones.py
backend/src/app/services/: event_processor_service.py  mqtt_service.py  mqtt_test_service.py  risk_service.py  subscription_service.py  thingspeak_service.py  thingspeak_test_service.py  zone_service.py
backend/src/app/utils/: constants.py  grid.py  hateoas.py  redis.py
backend/tests/: conftest.py  test_analytics_targets.py  test_discovery.py  test_event_processor.py  test_risk.py  test_settings.py  test_subscriptions.py  test_zones.py
docs/: Dockerfile  getting-started.md  index.md  nginx.conf  pyproject.toml
docs/backend/: api-reference.md  overview.md
docs/frontend/: api-catalog.md  api-reference.md  overview.md
docs/frontend/reference/: README.md
docs/intelligence/: api-reference.md  overview.md
frontend/: Dockerfile  index.html  nginx.conf  nginx.prod.conf  package-lock.json  package.json  typedoc.json  vite.config.ts
intelligence-system/: Dockerfile
k8s-manifests-backup/: backend-deployment.yaml  backend-service.yaml  frontend-service.yaml  ingress.yaml  keycloak-data-dev-persistentvolumeclaim.yaml  keycloak-service.yaml  (+1 more)
(+73 files in other folders)
