[project]
name = "fireguard-docs"
version = "0.1.0"
description = "Documentation toolchain for FireGuard"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocstrings[python]>=0.30.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "numpy>=2.4.2",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pygeohash>=1.2.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.47",
    "uvicorn[standard]>=0.41.0",
]
